added validator library and initial validation for bonuses (split is not working on strings), updated package.json with git information

--- a/package.json
+++ b/package.json
@@ -11,5 +11,16 @@
     , "ldapjs": ">= 0.1.1"
     , "async": ">= 0.1.9"
     , "connect-form": ">= 0.2.1"
+    , "validator": ">= 0.2.7"
+  }
+  
+  , "bugs" :
+    { "mail" : "",
+      "web" : "http://github.com/hross/Charity-Campaign/issues"
+    },
+  
+  , "repository": {
+    "type": "git",
+    "url": "http://github.com/hross/Charity-Campaign.git"
   }
 }
