--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   , "version": "0.0.2"
   , "private": true
   , "dependencies": {
-      "express": "2.4.3"
+      "express": ">= 2.4.3"
     , "ejs": ">= 0.0.1"
     , "mongodb": ">= 0.9.6"
     , "ldapjs": ">= 0.1.1"
     , "async": ">= 0.1.9"
     , "connect-form": ">= 0.2.1"
     , "validator": ">= 0.2.7"
-    , "formidable": ">= 1.0.2"
   }
   
   , "bugs" :
