--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     , "ldapjs": ">= 0.1.1"
     , "async": ">= 0.1.9"
     , "connect-form": ">= 0.2.1"
+    , "underscore": ">= 1.1.7"
   }
   
   , "bugs" :
