--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     , "connect-form": ">= 0.2.1"
     , "underscore": ">= 1.1.7"
   }
-  
+  , "optionalDependencies": {
+  	  "ldapjs": ">= 0.1.1"
+  }
   , "bugs" :
     { "mail" : "",
       "web" : "http://github.com/hross/Charity-Campaign/issues"
